# nasper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
server/linux/: install.sh  nasper_server.service  py_requirements.txt  server.py
src/: CMakeLists.txt  gui.cpp  main.cpp  millis.cpp  usb_descriptors.c
src/displays/: common.cpp  ili9486.cpp  st7735r.cpp
src/images/: default_icon_img.c  no_internet_icon_img.c  overheat_icon_img.c
src/includes/: gui.h  hid.h  lv_conf_template.h  millis.h  tft_conf.h
src/includes/displays/: common.h  ili9486.h  st7735r.h
